# dtproto

./: .gitignore  Cargo.toml  README.md  build.rs  jitpack.yml  package-lock.json  package.json
.cargo/: config.toml
Android/: android-dtproto-jniLibs.sh  build.gradle.kts  publish-maven.sh  settings.gradle.kts
Android/dtproto/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
Android/dtproto/src/androidTest/java/uniffi/dtproto/: GroupCryptoTest.kt
Android/dtproto/src/main/java/uniffi/dtproto/: dtproto.kt
Desktop/: test.js
iOS/: DTProto.podspec  DTProtoTests.swift
iOS/DTProto/: DTProtoAdapter.swift  dtproto.swift
iOS/DTProto/dtprotoFFI/: dtprotoFFI.h  module.modulemap
iOS/DTProtoTestProject/: project.yml
iOS/DTProtoTestProject/DTProtoTestProject.xcodeproj/: project.pbxproj
iOS/DTProtoTestProject/TestApp/: App.swift
scripts/: desktop-build.sh  ios-download-binary.sh  ios-dtproto-binary.sh
src/: dtproto.udl  export_neon.rs  group_crypto.rs  lib.rs
src/dtcurve/: curve.rs  mod.rs
src/dtcurve/curve/: curve25519.rs
src/uniffi/dtproto/: dtproto.kt
tests/: cross_version_compat.rs  cross_version_gen.rs  dtproto_tests.rs
